# ganeti-instance-poldek

./: .gitignore  Makefile.am  README  common.sh.in  configure.ac  create  defaults  export  import  packages.list  packages.systemd.list  packages.sysvinit.list  rename  variants.list  verify
examples/hooks/: grub2  ssh-keys  timezone
variants/: th-2013-i686.conf.in  th-2013.conf.in  th-i686.conf.in  th.conf.in
